--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edwin Ewudzie - WDD 131</title>
+    <link rel="stylesheet" href="styles/layout.css">
     
 </head>
 <body>
     <header>
         <h1 contenteditable="">Header</h1>
     </header>
-    //<div class="left-sidebar" contenteditable="">Left Sidebar</div>
-    <main contenteditable=""></main>
+    
+
+<nav>
+	<ul class="navigation">
+		<li><a href="#" title="Home">Home</a></li>
+		<li><a href="#" title="Project">Project</a></li>
+		<li><a href="#" title="Services">Services</a></li>
+		<li><a href="#" title="Contact Us">Contact</a></li>
+	</ul>
+</nav>
+    <main contenteditable="">main</main>
     <div class="aside-content" contenteditable="">Aside Content</div>
     <footer contenteditable="">&COPY; Edwin Ewudzie</footer>
 </body>
