--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals | Edwin Kibina Ewudzie | Home Page about html, css and Js">
+    <meta name="author" content="Edwin Ewudzie">
     <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="scripts/getdates.js">
+    <link rel="stylesheet" href="scripts/getdates.js" defer>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&amp;display=swap" rel="stylesheet">
+    <link rel="icon" href="data:,">
     
     <title>WDD 131 – Dynamic Web Fundamentals – Edwin Ewudzie</title>
 </head>
