--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <script src="scripts/getdates.js"></script>
+    <script src="scripts/getdates.js" defer></script>
     <header>
         <span id="course-title">WDD 131 – Dynamic Web Fundamentals</span>
         <nav>
