--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals | Edwin Kibina Ewudzie | Home Page about html, css and Js">
     <meta name="author" content="Edwin Ewudzie">
     <link rel="stylesheet" href="styles/base.css">
+    <script src="scripts/getdates.js" defer=""></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&amp;display=swap" rel="stylesheet">
