--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
 
-    <main contenteditable>
+    <main>
         <h1>Edwin Ewudzie</h1>
 
         <div class="container">
@@ -74,7 +74,7 @@
     </main>
 
 
-    <footer contenteditable>
+    <footer>
         <p>
             &copy;
             <span id="currentyear">2026</span>
