update wording accra

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <h2>Accra, Ghana</h2>
                 <div class="accra">
                     <p>
-                        Acrra is the capital city of Ghana. It is full of cultural diversities, history, food and
+                        Accra is the capital city of Ghana. It is full of cultural diversities, history, food and
                         everyday life. Due to its mix cultural diversities Accra never sleeps.
                     </p>
                     <img src="images/accra_zen.jpg" alt=" Accra Zen Garden">
