--- a/temples.html
+++ b/temples.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <header>
-        <span id="course-title">WDD 131 – Temple Album</span>
+       <h1><span id="course-title">Temple Album</span></h1> 
         <nav>
             <ul class="navigation">
                 <li><a href="#" title="Home">Home</a></li>
@@ -36,16 +36,17 @@
 
     <main>
       <h1>Home</h1>
-      <div id="temple-gallery"><figure><img src="images/abidjan_ivory_coast_temple_exterior.webp" alt="Abidjan Ivory Coast Temple" loading="lazy"><figcaption>Albuquerque New Mexico Temple</figcaption></figure>
-        <figure><img src="images/accra_ghana_temple.webp" alt="Accra Ghana Temple" loading="lazy"><figcaption>Atlanta Georgia Temple</figcaption></figure><figure><img src="images/bangkok_thailand.webp" alt="Bangkok Thailand Temple" loading="lazy"><figcaption>Bangkok Thailand Temple</figcaption></figure>
-        <figure><img src="images/apia_samoa_temple_lds.webp" alt="Apia Samoa Temple" loading="lazy"><figcaption>Barranquilla Colombia Temple</figcaption></figure><figure><img src="images/bogota_colombia.webp" alt="Bogota Colombia Temple" loading="lazy"><figcaption>Bogota Colombia Temple</figcaption></figure>
-        <figure><img src="images/bogota_colombia_temple_lds.webp" alt="Bogota Colombia Temple" loading="lazy"><figcaption>Brigham City Utah Temple</figcaption></figure><figure><img src="images/campinas_brazil.webp" alt="Campinas Brazil Temple" loading="lazy"><figcaption>Campinas Brazil Temple</figcaption></figure>
-        <figure><img src="images/brigham_city_utah_mormon_temple.webp" alt="Brigham City Utah Temple" loading="lazy"><figcaption>Houston Texas Temple</figcaption></figure><figure><img src="images/huntsville_alabama.webp" alt="Huntsville Alabama Temple" loading="lazy"><figcaption>Huntsville Alabama Temple</figcaption></figure>
-        <figure><img src="images/calgary_alberta_temple_before_open_house.webp" alt="Calgary Alberta Temple" loading="lazy"><figcaption>Houston Texas Temple</figcaption></figure><figure><img src="images/huntsville_alabama.webp" alt="Huntsville Alabama Temple" loading="lazy"><figcaption>Huntsville Alabama Temple</figcaption></figure>
-        <figure><img src="images/curitiba_brazil_temple_lds.webp" alt="Curitiba Brazil Temple" loading="lazy"><figcaption>Houston Texas Temple</figcaption></figure><figure><img src="images/huntsville_alabama.webp" alt="Huntsville Alabama Temple" loading="lazy"><figcaption>Huntsville Alabama Temple</figcaption></figure>
-        <figure><img src="images/fort_lauderdale_florida_temple_lighted.webp" alt="Fort Lauderdale Florida Temple" loading="lazy"><figcaption>Houston Texas Temple</figcaption></figure><figure><img src="images/huntsville_alabama.webp" alt="Huntsville Alabama Temple" loading="lazy"><figcaption>Huntsville Alabama Temple</figcaption></figure>
-        <figure><img src="images/layton_utah_temple_exterior.webp" alt="Layton Utah Temple" loading="lazy"><figcaption>Houston Texas Temple</figcaption></figure><figure><img src="images/huntsville_alabama.webp" alt="Huntsville Alabama Temple" loading="lazy"><figcaption>Huntsville Alabama Temple</figcaption></figure>
-      </div>
+      <div id="temple-gallery">
+        <figure><img src="images/abidjan_ivory_coast_temple_exterior.webp" alt="Abidjan Ivory Coast Temple" loading="lazy"><figcaption>Abidjan Ivory Coast Temple</figcaption></figure>
+        <figure><img src="images/accra_ghana_temple.webp" alt="Accra Ghana Temple" loading="lazy"><figcaption>Accra Ghana Temple</figcaption></figure>
+        <figure><img src="images/apia_samoa_temple_lds.webp" alt="Apia Samoa Temple" loading="lazy"><figcaption>Apia Samoa Temple</figcaption></figure>
+        <figure><img src="images/bogota_colombia_temple_lds.webp" alt="Bogota Colombia Temple" loading="lazy"><figcaption>Bogota Colombia Temple</figcaption></figure>
+        <figure><img src="images/brigham_city_utah_mormon_temple.webp" alt="Brigham City Utah Temple" loading="lazy"><figcaption>Brigham City Utah Temple</figcaption></figure>
+        <figure><img src="images/calgary_alberta_temple_before_open_house.webp" alt="Calgary Alberta Temple" loading="lazy"><figcaption>Calgary Alberta Temple</figcaption></figure>
+        <figure><img src="images/curitiba_brazil_temple_lds.webp" alt="Curitiba Brazil Temple" loading="lazy"><figcaption>Curitiba Brazil Temple</figcaption></figure>
+        <figure><img src="images/fort_lauderdale_florida_temple_lighted.webp" alt="Fort Lauderdale Florida Temple" loading="lazy"><figcaption>Fort Lauderdale Florida Temple</figcaption></figure>
+        <figure><img src="images/layton_utah_temple_exterior.webp" alt="Layton Utah Temple" loading="lazy"><figcaption>Layton Utah Temple</figcaption></figure>  
+       </div>
     </main>
 
     <footer>
