--- a/temples.html
+++ b/temples.html
@@ -37,15 +37,15 @@
     <main>
       <h1>Home</h1>
       <div id="temple-gallery">
-        <figure><img src="images/abidjan_ivory_coast_temple_exterior.webp" alt="Abidjan Ivory Coast Temple" loading="lazy"><figcaption>Abidjan Ivory Coast Temple</figcaption></figure>
+        <figure><img src="images/ivory_coast_temple.webp" alt="Abidjan Ivory Coast Temple" loading="lazy"><figcaption>Abidjan Ivory Coast Temple</figcaption></figure>
         <figure><img src="images/accra_ghana_temple.webp" alt="Accra Ghana Temple" loading="lazy"><figcaption>Accra Ghana Temple</figcaption></figure>
         <figure><img src="images/apia_samoa_temple_lds.webp" alt="Apia Samoa Temple" loading="lazy"><figcaption>Apia Samoa Temple</figcaption></figure>
-        <figure><img src="images/bogota_colombia_temple_lds.webp" alt="Bogota Colombia Temple" loading="lazy"><figcaption>Bogota Colombia Temple</figcaption></figure>
-        <figure><img src="images/brigham_city_utah_mormon_temple.webp" alt="Brigham City Utah Temple" loading="lazy"><figcaption>Brigham City Utah Temple</figcaption></figure>
-        <figure><img src="images/calgary_alberta_temple_before_open_house.webp" alt="Calgary Alberta Temple" loading="lazy"><figcaption>Calgary Alberta Temple</figcaption></figure>
+        <figure><img src="images/colombia_temple.webp" alt="Bogota Colombia Temple" loading="lazy"><figcaption>Bogota Colombia Temple</figcaption></figure>
+        <figure><img src="images/brigham_city_temple.webp" alt="Brigham City Utah Temple" loading="lazy"><figcaption>Brigham City Utah Temple</figcaption></figure>
+        <figure><img src="images/alberta_temple.webp" alt="Calgary Alberta Temple" loading="lazy"><figcaption>Calgary Alberta Temple</figcaption></figure>
         <figure><img src="images/curitiba_brazil_temple_lds.webp" alt="Curitiba Brazil Temple" loading="lazy"><figcaption>Curitiba Brazil Temple</figcaption></figure>
-        <figure><img src="images/fort_lauderdale_florida_temple_lighted.webp" alt="Fort Lauderdale Florida Temple" loading="lazy"><figcaption>Fort Lauderdale Florida Temple</figcaption></figure>
-        <figure><img src="images/layton_utah_temple_exterior.webp" alt="Layton Utah Temple" loading="lazy"><figcaption>Layton Utah Temple</figcaption></figure>  
+        <figure><img src="images/florida_temple.webp" alt="Fort Lauderdale Florida Temple" loading="lazy"><figcaption>Fort Lauderdale Florida Temple</figcaption></figure>
+        <figure><img src="images/layton_utah_temple.webp" alt="Layton Utah Temple" loading="lazy"><figcaption>Layton Utah Temple</figcaption></figure>  
        </div>
     </main>
 
